--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.treth.d.completekeyguarddisabler"
     android:versionCode="1"
-    android:versionName="1.06" >
+    android:versionName="1.12a" >
 
     <uses-sdk
         android:minSdkVersion="14"
